--- a/src/style.scss
+++ b/src/style.scss
@@ -63,13 +63,23 @@ $size: 73px;
   margin-left: 15px;
 }
 
-/* Hide scrollbar for Chrome, Safari and Opera */
-.scrollbar-hidden::-webkit-scrollbar {
-  display: none;
+.scrollbar-hidden {
+  scrollbar-width: thin;
 }
 
-/* Hide scrollbar for IE, Edge add Firefox */
-.scrollbar-hidden {
-  scrollbar-width: none; /* Firefox */
-  -ms-overflow-style: none;
+.scrollbar-hidden::-webkit-scrollbar {
+  width: thin;
+}
+
+@media only screen and (max-width: 992px) {
+  /* Hide scrollbar for Chrome, Safari and Opera */
+  .scrollbar-hidden::-webkit-scrollbar {
+    display: none;
+  }
+
+  /* Hide scrollbar for IE, Edge add Firefox */
+  .scrollbar-hidden {
+    scrollbar-width: none; /* Firefox */
+    -ms-overflow-style: none;
+  }
 }
